--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 </head>
 <body>
 <header id="acceuil">
-    <nav class="liens_header"><i class="fas fa-home"></i><br><a href="#acceuil">Acceuil</a></nav>
-    <nav class="liens_header"><i class="fas fa-star"></i><br><a href="#sondages">Sondages</a></nav>
-    <nav class="liens_header"><i class="fas fa-poll-h"></i><br><a href="actualite">Actualtés</a></nav>
-    <nav class="liens_header"><i class="fas fa-user"></i><br><a href="connexion">Connexion</a></nav>
+    <img src="img/logosba.png" alt="logoSBA">
+    <nav class="liens_header"><a href="#acceuil"><i class="fas fa-home"></i><br>Acceuil</a></nav>
+    <nav class="liens_header"><a href="#sondages"><i class="fas fa-poll-h"></i><br>Sondages</a></nav>
+    <nav class="liens_header"><a href="actualite"><i class="fas fa-star"></i><br>Actualtés</a></nav>
+    <nav class="liens_header"><a href="classement.html"><i class="fas fa-clipboard-list"></i><br>Classement</a></nav>
+    <nav class="liens_header"><a href="connexion"><i class="fas fa-user"></i><br>Connexion</a></nav>
 </header>
 <main>
     <div class="bleu">
         <h1>Le site de sondage officiel de la NBA !</h1>
     </div>
     <div class="img_main">
-        <h2>Des sondages sur <span class="rouge">toute vos équipes préférées</span></h2>
+        <h2>Des sondages sur <span class="rouge">toutes vos équipes préférées</span></h2>
     </div>
     <h3  id="sondages" >Sondages:</h3>
     <div class="sondages1">
         <div class="card" >
             <img src="img/detritvspistons.png" alt="Match">
             <div class="container">
-                <h4><b>Pistons vs Wizards</b></h4>
+                <h4><a href="Sondage.html"><b>Pistons vs Wizards</b></a></h4>
                 <p>20:00</p>
             </div>
         </div>
@@ -73,9 +75,11 @@
 </main>
 <footer>
     <div class="footer_nav">
-        <nav class="liens_footer"><a href="acceuil">Acceuil</a></nav>
-        <nav class="liens_footer"><a href="populaires">Populaires</a></nav>
-        <nav class="liens_footer"><a href="resultat">Résultats</a></nav>
+        <nav class="liens_footer"><a href="#acceuil">Acceuil</a></nav>
+        <nav class="liens_footer"><a href="#sondages">Sondages</a></nav>
+        <nav class="liens_footer"><a href="actualités">Actualités</a></nav>
+        <nav class="liens_footer"><a href="classement.html">Classement</a></nav>
+        <nav class="liens_footer"><a href="contact">Contact</a></nav>
         <nav class="liens_footer"><a href="connexion">Connexion</a></nav>
     </div>
     <nav class="liens_footer2"><a href="mentions">Mentions légales</a></nav>
