--- a/classement.html
+++ b/classement.html
@@ -11,10 +11,12 @@
 </head>
 <body>
 <header>
-    <nav class="liens_header"><i class="fas fa-home"></i><br><a href="index.html">Acceuil</a></nav>
-    <nav class="liens_header"><i class="fas fa-poll-h"></i><br><a href="#sondages">Sondages</a></nav>
-    <nav class="liens_header"><i class="fas fa-star"></i><br><a href="actualite">Actualtés</a></nav>
-    <nav class="liens_header"><i class="fas fa-user"></i><br><a href="connexion">Connexion</a></nav>
+    <img src="img/logosba.png" alt="logoSBA">
+    <nav class="liens_header"><a href="index.html"><i class="fas fa-home"></i><br>Acceuil</a></nav>
+    <nav class="liens_header"><a href="#sondages"><i class="fas fa-poll-h"></i><br>Sondages</a></nav>
+    <nav class="liens_header"><a href="actualite"><i class="fas fa-star"></i><br>Actualtés</a></nav>
+    <nav class="liens_header"><a href="classement.html"><i class="fas fa-clipboard-list"></i><br>Classement</a></nav>
+    <nav class="liens_header"><a href="connexion"><i class="fas fa-user"></i><br>Connexion</a></nav>
 </header>
 <main>
     <div class="bleu">
@@ -87,9 +89,11 @@
 </main>
 <footer>
     <div class="footer_nav">
-        <nav class="liens_footer"><a href="#acceuil">Acceuil</a></nav>
+        <nav class="liens_footer"><a href="index.html">Acceuil</a></nav>
         <nav class="liens_footer"><a href="#sondages">Sondages</a></nav>
-        <nav class="liens_footer"><a href="actualite">Actualtés</a></nav>
+        <nav class="liens_footer"><a href="actualités">Actualités</a></nav>
+        <nav class="liens_footer"><a href="classement.html">Classement</a></nav>
+        <nav class="liens_footer"><a href="contact">Contact</a></nav>
         <nav class="liens_footer"><a href="connexion">Connexion</a></nav>
     </div>
     <nav class="liens_footer2"><a href="mentions">Mentions légales</a></nav>
